# slaughterhouse

./: CMakeLists.txt  main.c
animal/: animal.c  animal.h  horse.c  horse.h  ostrich.c  ostrich.h  pig.c  pig.h  platypus.c  platypus.h  typeanimal.c  typeanimal.h  unicorn.c  unicorn.h
slaughterhouse/: animalcell.c  animalcell.h  slaughterhouse.c  slaughterhouse.h
